cmake_minimum_required(VERSION 3.24)
project(wow C)

set(CMAKE_C_STANDARD 11)

add_executable(wow main.c main4.c main3.c main5.c BoilerPlate.c main6.cpp main7.c madlib.c array.c betterFourFunctionCalc.c switchStatments.c Struts.c whileLoops.c Password.c forLoops.c "2dArraysNestedLoops.c" 2dArraysNestedLoops.c memoryAddress.c Quiz.c calc.c)
